# gt-match-ros_install

./: README.md  instal gt-match-ros.txt  patch
stata-dataset/: tobuild.txt
stata-dataset/groundtruth/: CMakeLists.txt  Makefile  manifest.xml
stata-dataset/groundtruth/cmake/: FindCHOLMODinSuiteSparse.cmake
stata-dataset/groundtruth/src/explode_bag/: explode_bag.cpp
stata-dataset/groundtruth/src/facedetect/: CMakeLists.txt
stata-dataset/groundtruth/src/match_ros/: CMakeLists.txt  compute_transforms_ros.cpp  match_ros.cpp
stata-dataset/groundtruth/src/plan_utils/: align_utils.cpp
stata-dataset/groundtruth/src/tools/: CMakeLists.txt
stata-dataset/groundtruth/src/writepcd_ros/: CMakeLists.txt
stata-dataset/groundtruth/src/xml2lcm/: CMakeLists.txt
stata-dataset/isam_pod/: Makefile
stata-dataset/isam_pod/cmake/: FindCHOLMODinSuiteSparse.cmake
stata-dataset/isam_pod/isam/: CMakeLists.txt
stata-dataset/isam_pod/isamlib/: CMakeLists.txt  Cholesky.cpp
stata-dataset/libfloorplan/src/lib/: GraphFileOperations.hpp
stata-dataset/visualization/: CMakeLists.txt
stata-dataset/visualization/src/collections_viewer/: CMakeLists.txt
